update Dockerfile and docker-compose.yml: add port 30303 and EXPOSE some ports

--- a/docker/ethereum/geth/Dockerfile
+++ b/docker/ethereum/geth/Dockerfile
@@ -7,3 +7,7 @@ COPY ./genesis.json /root/.ethereum/
 RUN geth --datadir /root/.ethereum init /root/.ethereum/genesis.json
 
 VOLUME ["/root/.ethereum"]
+
+EXPOSE 8545
+EXPOSE 8546
+EXPOSE 30303
