--- a/docker/contents/Dockerfile
+++ b/docker/contents/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu
 
 RUN apt update
-RUN apt install -y python3-pip python3-dev libfuzzy-dev
-RUN pip3 install flask ssdeep
+RUN apt install -y python3-pip python3-dev libfuzzy-dev vim
+RUN pip3 install flask ssdeep requests
 
