update docker files: network between geth and content

--- a/docker/contents/docker-compose.yml
+++ b/docker/contents/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     tty: true
     volumes:
       - ./workdir:/root/workdir
+    networks:
+      - network1
+
+networks:
+  network1:
+    external: true
